2000-12-08  Dave Peticolas  <dave@krondo.com>

	* src/gnome/gnc-dateedit.c (gnc_date_edit_get_date): make sure the
	date returned is valid.

2000-12-05  Dave Peticolas  <dave@krondo.com>

	* src/engine/util.c (PrintAmt): add minimum decimal places option.
	This is a workaround since all amounts are printed in the current
	locale. GnuCash 2.0 will fix this using gnc-commodity objects.

	* src/SplitLedger.c (xaccSRInitRegisterData): use the date stripped
	of its time values for the default date. This fixes a bug where dates
	entered by hand show up before default dates.

2000-10-26  Dave Peticolas  <dave@krondo.com>

	* src/engine/util.c (xaccParseAmount): interpret (NUM) as -NUM.

	* src/register/pricecell.c: allow '(' and ')' in the price cells.

2000-10-22  Dave Peticolas  <dave@krondo.com>

	* src/gnome/dialog-find-transactions.c: use the standard date
	widgets.

	* src/engine/Queue.c: fix a cost basis bug

2000-08-22  Dave Peticolas  <dave@krondo.com>

	* src/gnome/reconcile-list.c (gnc_reconcile_list_fill): fix a
	memory leak (xaccTransGetDateStr returns a malloc'd string).

2000-08-07  Dave Peticolas  <dave@krondo.com>

	* src/register/cellblock.c (FreeCellBlockMem): fix memory leaks

2000-07-13  Robert Graham Merkel  <rgmerk@mira.net>

	* src/scm/report/transaction-report.scm: Added checks
	to reverse balances if global option set.

	* src/guile/gnc.gwp: Added wrapping for gnc_reverse_balance

2000-06-25  Dave Peticolas  <dave@krondo.com>

	* src/scm/date-utilities.scm: cleanup.

	* src/scm/report/transaction-report.scm: fix bug in use of
	timepairs.

2000-06-18  Dave Peticolas  <dave@krondo.com>

	* src/scm/command-line.scm: take 'development version' out
	of the --version string.

	* src/guile/gnucash.c.in: take out the unstable message.

	* rpm/gnucash.spec.in: Take out the japanese translation.

	* src/scm/report/hello-world.scm: take out the testing option
	to crash the report.

	* src/gnome/window-register.c (gnc_register_create_menu_bar): take